name:                herringbone
version:             0.0.9
synopsis:            A library for compiling and serving static web assets.
description:         A library for compiling and serving static web assets. For more information, please see <https://github.com/hdgarrood/herringbone>.
license:             MIT
license-file:        LICENSE
author:              Harry Garrood
maintainer:          harry@garrood.me
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
    README.md
    test/*.hs

source-repository head
  type:     git
  location: https://github.com/hdgarrood/herringbone

test-suite herringbone-tests
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  hs-source-dirs:       test .
  ghc-options:          -Wall
  build-depends:        base >=4.5 && <5,
                        wai  >= 2.0 && <3,
                        wai-app-static,
                        text,
                        bytestring,
                        containers,
                        transformers,
                        mtl,
                        system-filepath,
                        system-fileio,
                        process,
                        process-listlike,
                        directory,
                        unix-compat,
                        http-types,
                        time,
                        old-locale,
                        hspec >= 1.8,
                        HUnit,
                        warp,
                        file-embed,
                        template-haskell
  default-extensions:   OverloadedStrings,
                        TypeSynonymInstances,
                        FlexibleInstances,
                        RankNTypes,
                        ViewPatterns,
                        GeneralizedNewtypeDeriving
  default-language:     Haskell2010

library
  ghc-options:          -Wall
  exposed-modules:      Web.Herringbone,
                        Web.Herringbone.Preprocessor.StdIO
                        Web.Herringbone.Preprocessor.Sass
                        Web.Herringbone.Preprocessor.CoffeeScript
  other-modules:        Web.Herringbone.Types
                        Web.Herringbone.Configuration
                        Web.Herringbone.GetBuildMapping
                        Web.Herringbone.BuildAsset
                        Web.Herringbone.FindAsset
                        Web.Herringbone.Adapter.Wai
  build-depends:        base >=4.5 && <5,
                        wai  >= 2.0 && <3,
                        wai-app-static,
                        text,
                        bytestring,
                        containers,
                        transformers,
                        mtl,
                        system-filepath,
                        system-fileio,
                        process,
                        process-listlike,
                        directory,
                        unix-compat,
                        http-types,
                        time,
                        old-locale,
                        file-embed,
                        template-haskell
  default-extensions:   OverloadedStrings,
                        TypeSynonymInstances,
                        FlexibleInstances,
                        RankNTypes,
                        ViewPatterns,
                        GeneralizedNewtypeDeriving
  default-language:     Haskell2010
