name:                wai-herringbone
version:             0.0.1
synopsis:            A library for compiling and serving static web assets.
description:         A library for compiling and serving static web assets. For more information, please see <https://github.com/hdgarrood/wai-herringbone>.
license:             MIT
license-file:        LICENSE
author:              Harry Garrood
maintainer:          harry@garrood.me
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  -- exposed-modules:
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.6 && <4.7
  -- hs-source-dirs:
  default-language:    Haskell2010
