name:                wai-herringbone
version:             0.0.1
synopsis:            A library for compiling and serving static web assets.
description:         A library for compiling and serving static web assets. For more information, please see <https://github.com/hdgarrood/wai-herringbone>.
license:             MIT
license-file:        LICENSE
author:              Harry Garrood
maintainer:          harry@garrood.me
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/hdgarrood/wai-herringbone

library
  ghc-options:          -Wall
  exposed-modules:      Network.Wai.Herringbone
  other-modules:        Network.Wai.Herringbone.FileSystemUtils
                        Network.Wai.Herringbone.Types
  build-depends:        base >=4.6 && <4.7,
                        wai  >= 2.0 && <3,
                        wai-app-static,
                        text,
                        bytestring,
                        containers,
                        split,
                        system-filepath,
                        system-fileio,
                        directory,
                        temporary,
                        unix-compat,
                        http-types,
                        time
  default-extensions:   OverloadedStrings, TypeSynonymInstances, FlexibleInstances
  default-language:     Haskell2010
