name:                herringbone-fay
version:             0.0.1
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Harry Garrood
maintainer:          harry@garrood.me
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Web.Herringbone.Preprocessor.Fay
  build-depends:       base >=4.6 && <5,
                       herringbone >= 0.1.0,
                       fay >= 0.20.0.0,
                       filepath,
                       temporary,
                       bytestring,
                       transformers,
                       mtl,
                       system-filepath
  default-extensions:  OverloadedStrings
  default-language:    Haskell2010
