name:                herringbone-fay
version:             0.1.0
synopsis:            Fay preprocessor for herringbone.
description:         A Fay preprocessor for the herringbone web asset pipeline.  Compile and serve Fay files from any Haskell web application.
license:             MIT
license-file:        LICENSE
author:              Harry Garrood
maintainer:          harry@garrood.me
copyright:           MIT
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Web.Herringbone.Preprocessor.Fay
  build-depends:       base >=4.6 && <5,
                       herringbone >= 0.1.0,
                       fay >= 0.20.0.0,
                       filepath,
                       temporary,
                       bytestring,
                       transformers,
                       mtl,
                       system-filepath
  default-extensions:  OverloadedStrings
  default-language:    Haskell2010
