name:                herringbone-tests
version:             0.0.1
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Harry Garrood
maintainer:          harry@garrood.me
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable herringbone-tests
  main-is:              Spec.hs
  ghc-options:          -Wall
  build-depends:        base >=4.5 && <5,
                        wai,
                        herringbone,
                        herringbone-wai,
                        text,
                        bytestring,
                        containers,
                        transformers,
                        mtl,
                        system-filepath,
                        system-fileio,
                        process,
                        process-listlike,
                        directory,
                        unix-compat,
                        http-types,
                        time,
                        old-locale,
                        hspec >= 1.8,
                        HUnit,
                        warp,
                        file-embed,
                        template-haskell
  default-extensions:   OverloadedStrings,
                        TypeSynonymInstances,
                        FlexibleInstances,
                        RankNTypes,
                        ViewPatterns,
                        GeneralizedNewtypeDeriving
  default-language:     Haskell2010
