name:                herringbone-tests
version:             0.0.1
license:             MIT
license-file:        LICENSE
author:              Harry Garrood
maintainer:          harry@garrood.me
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable herringbone-tests
  main-is:              Spec.hs
  ghc-options:          -Wall
  build-depends:        base >=4.5 && <5,
                        wai,
                        herringbone,
                        herringbone-wai,
                        herringbone-embed,
                        text,
                        bytestring,
                        containers,
                        transformers,
                        mtl,
                        system-filepath,
                        system-fileio,
                        process,
                        process-listlike,
                        directory,
                        unix-compat,
                        http-types,
                        time,
                        old-locale,
                        hspec >= 1.8,
                        HUnit,
                        warp,
                        file-embed,
                        template-haskell
  default-extensions:   OverloadedStrings,
                        TypeSynonymInstances,
                        FlexibleInstances,
                        RankNTypes,
                        ViewPatterns,
                        GeneralizedNewtypeDeriving
  default-language:     Haskell2010
